[package]
name = "iset"
version = "0.0.3"
authors = ["Timofey Prodanov <timofey.prodanov@gmail.com>"]
edition = "2018"
description = "This crates implements map and set with interval keys."
repository = "https://gitlab.com/tprodanov/iset"
readme = "README.md"
license = "MIT"
keywords = ["interval", "intervals", "interval_tree", "interval_set", "map"]
documentation = "https://docs.rs/iset"
exclude = [".cargo_vcs_info.json", ".gitignore"]

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
incremental = false

[dependencies]
bit-vec = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.7"
