[package]
name = "iset"
version = "0.1.1"
authors = ["Timofey Prodanov <timofey.prodanov@gmail.com>"]
edition = "2018"
description = "Map and set with interval keys (x..y)."
repository = "https://github.com/tprodanov/iset"
readme = "README.md"
license = "MIT"
keywords = ["interval", "intervals", "interval_tree", "interval_set", "map"]
documentation = "https://docs.rs/iset"
exclude = [".cargo_vcs_info.json", ".gitignore"]

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
incremental = false

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"

[features]
default = ["dot"]
dot = []
